[gd_scene load_steps=17 format=3 uid="uid://b0e0im4o7njic"]

[ext_resource type="Script" path="res://UI/HUD.gd" id="1_afci1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmxxt"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(1, 2.08165e-12)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lsjwv"]
bg_color = Color(0.992157, 1, 0, 1)
skew = Vector2(1, 2.08165e-12)
corner_detail = 1

[sub_resource type="LabelSettings" id="LabelSettings_ou401"]
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 4
outline_color = Color(1, 0.960784, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_waf6g"]
bg_color = Color(0, 0, 0, 1)
skew = Vector2(1, 2.08165e-12)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0onwm"]
bg_color = Color(0.313726, 0.670588, 1, 1)
skew = Vector2(1, 2.08165e-12)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_22vcx"]
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ygeol"]
corner_detail = 1

[sub_resource type="LabelSettings" id="LabelSettings_hjdtt"]
font_size = 64
font_color = Color(1, 0.729412, 0.831373, 1)
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_gxll5"]
font_size = 24
font_color = Color(0.996078, 1, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jmpci"]
font_size = 36
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7n17j"]
font_size = 24
font_color = Color(0, 0, 0, 1)
outline_size = 5
outline_color = Color(1, 0.952941, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1ghst"]
font_size = 24
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_u7vv7"]
resource_name = "GameOver"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GAME_OVER:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 4, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0872665, -0.0872665, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GAME_OVER:scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 3, 5, 6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.25, 1.25), Vector2(0.85, 0.85), Vector2(1.15, 1.15), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_3d5le"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GAME_OVER:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GAME_OVER:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a3jic"]
_data = {
"GameOver": SubResource("Animation_u7vv7"),
"RESET": SubResource("Animation_3d5le")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_afci1")

[node name="Health" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.5
offset_top = -32.0
offset_right = 165.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_qmxxt")
theme_override_styles/fill = SubResource("StyleBoxFlat_lsjwv")
max_value = 5.0
step = 1.0
value = 5.0
show_percentage = false

[node name="Value" type="Label" parent="Health"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "00"
label_settings = SubResource("LabelSettings_ou401")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Shield" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.5
offset_top = -32.0
offset_right = 165.5
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_waf6g")
theme_override_styles/fill = SubResource("StyleBoxFlat_0onwm")
max_value = 2.0
step = 1.0
show_percentage = false

[node name="Value" type="Label" parent="Shield"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -13.0
offset_right = 20.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "00"
label_settings = SubResource("LabelSettings_ou401")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Heat" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.529
anchor_top = 0.941
anchor_right = 0.529
anchor_bottom = 0.941
offset_left = -165.408
offset_top = -5.76801
offset_right = 165.592
offset_bottom = 6.23199
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_22vcx")
theme_override_styles/fill = SubResource("StyleBoxFlat_ygeol")
max_value = 20.0
step = 1.0
show_percentage = false

[node name="RechargeMarker" type="ColorRect" parent="Heat"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 47.5001
offset_top = -19.0
offset_right = 62.5001
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2

[node name="LIVES" type="Label" parent="."]
layout_mode = 0
offset_left = 556.0
offset_top = 578.0
offset_right = 600.0
offset_bottom = 604.0
text = "Lives:"

[node name="Value" type="Label" parent="LIVES"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -13.0
offset_right = 25.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "00"

[node name="LEVEL" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 46.0
offset_bottom = 27.0
text = "Level:"

[node name="Value" type="Label" parent="LEVEL"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 6.0
offset_top = -13.0
offset_right = 25.0
offset_bottom = 13.0
grow_horizontal = 0
grow_vertical = 2
text = "00"

[node name="GAME_OVER" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.507
anchor_right = 0.506
anchor_bottom = 0.507
offset_left = -190.412
offset_top = -50.036
offset_right = 189.588
offset_bottom = 49.964
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(190, 50)
text = "GAME OVER"
label_settings = SubResource("LabelSettings_hjdtt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="GAME_OVER"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -18.5
offset_right = 86.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 0
text = "Press 'E' to exit"
label_settings = SubResource("LabelSettings_gxll5")

[node name="Time" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.273
anchor_top = 0.961
anchor_right = 0.273
anchor_bottom = 0.961
offset_left = -19.496
offset_top = -27.728
offset_right = 20.504
offset_bottom = 25.272
grow_horizontal = 2
text = "0"
label_settings = SubResource("LabelSettings_jmpci")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.704
anchor_top = 0.965
anchor_right = 0.704
anchor_bottom = 0.965
offset_left = -21.0081
offset_top = -18.32
offset_right = 20.9919
offset_bottom = 18.68
grow_horizontal = 2
text = "000"
label_settings = SubResource("LabelSettings_7n17j")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreModifer" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.72
anchor_top = 0.931
anchor_right = 0.72
anchor_bottom = 0.931
offset_left = -21.4401
offset_top = -18.288
offset_right = 20.5599
offset_bottom = 18.712
grow_horizontal = 2
text = "X"
label_settings = SubResource("LabelSettings_1ghst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreModValue" type="Label" parent="ScoreModifer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -18.5
offset_right = 20.0
offset_bottom = 18.5
grow_horizontal = 0
grow_vertical = 2
text = "1"
label_settings = SubResource("LabelSettings_1ghst")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a3jic")
}

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.319
anchor_top = 0.969
anchor_right = 0.319
anchor_bottom = 0.969
offset_left = -20.488
offset_top = -19.912
offset_right = 19.512
offset_bottom = 20.088

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.501961)

[node name="BossBar" type="ProgressBar" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 0.023
anchor_bottom = 1.0
offset_right = 0.503998
grow_vertical = 2
value = 100.0

[node name="ModiferBar" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.984
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.567993
offset_top = 648.0
offset_right = 629.0
offset_bottom = 19.0
grow_horizontal = 0
grow_vertical = 2
rotation = -1.5708
value = 100.0
